syntax = "proto3";

import "google/protobuf/struct.proto";

package pipeman;

option go_package = "github.com/ondbyte/pm/protos/go/protos";

message Port {
    string name = 1;
    google.protobuf.Value type = 3;
}

message Card {
    string name = 1;
    map<string,Port> in=2;
    map<string,Port> out=3;
}

message Cards {
    repeated Card cards = 1;
}

message EmptyReq {}

message CardInputWithCardName {
    string card = 1;
    map<string,Port> input = 2;
    map<string,Port> output = 3;
}

service CardsRunner {
    rpc GetSupportedCards(EmptyReq) returns (Cards);
    rpc RunCard(CardInputWithCardName) returns (google.protobuf.Struct);
}